project 2, fix scrollbar and alignment

--- a/styles/style.css
+++ b/styles/style.css
@@ -40,12 +40,12 @@ ol {
 
 .content {
   display: flex;
-  align-items: end;
+  align-items: center;
   column-gap: 26px;
   width: 1140px;
   margin: auto;
-  padding-top: 133px;
-  padding-bottom: 133px;
+  padding: 133px 30px;
+  justify-content: center;
 }
 
 .search-form {
